# e-ra-helper

./: .gitignore  privacy.md  pyproject.toml  readme.md
.github/scripts/: make_linux_zip.py  make_window_zip.py
.github/workflows/: release.yaml  relesae.yaml
chrome-extension/: e-ra-helper.js  manifest.json  service_worker.js
desktop-app/: com.eoh.era_helper_desktop.json
installer/: com.eoh.era_helper_desktop.json  linux_installer.py  window_installer.py
native-messaging-host/: e-ra-helper.py
ttlock_encoder/: issue_card.py  ttlock_encoder.py
