[tool.poetry]
name = "e-ra-helper"
version = "0.1.0"
description = "E-Ra helper desktop app"
authors = ["EoH"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
nativemessaging = "^1.0.1"
pyinstaller = "^5.12.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
